<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:background="@drawable/first_back"
        android:layout_height="match_parent"
        android:id="@+id/imageView"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_arrays_background"
        android:id="@+id/ivWhiteArraysBackground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitleHighScore"
        android:text="@string/sHighScore"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/largeText"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal|bold"
        android:layout_marginTop="@dimen/x40"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/land"
        android:layout_alignParentBottom="true"
        android:id="@+id/ivLand"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grass"
        android:layout_alignParentBottom="true"
        android:id="@+id/ivGrass"/>



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/txt_score1"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/fab_margin"
        android:id="@+id/imageView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/txt_score1"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/fab_margin"
        android:id="@+id/imageView3" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:rowCount="2"
        android:columnCount="2">
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEasyMode"
                android:text="@string/sHighScoreEasy"
                android:textSize="@dimen/meduimText"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="normal|bold" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/txt_score"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHighScoreEasy"
                    android:text="@string/sHighScore"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/meduimText"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="normal|bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/fab_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNormalMode"
                android:text="@string/sHighScoreNormal"
                android:textSize="@dimen/meduimText"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="normal|bold" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/txt_score"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHighScoreNormal"
                    android:text="@string/sHighScore"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/meduimText"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="normal|bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/fab_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvHardMode"
                android:text="@string/sHighScoreHard"
                android:textSize="@dimen/meduimText"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="normal|bold" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/txt_score"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHighScoreHard"
                    android:text="@string/sHighScore"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/meduimText"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="normal|bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/fab_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAdvancedMode"
            android:text="@string/sHighScoreAdvanced"
            android:textSize="@dimen/meduimText"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal|bold" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/txt_score"
                android:layout_centerInParent="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvHighScoreAdvanced"
                android:text="@string/sHighScore"
                android:layout_centerInParent="true"
                android:textSize="@dimen/meduimText"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="normal|bold" />
        </RelativeLayout>
        </LinearLayout>

    </GridLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:id="@+id/ibBack"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"/>
    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/ivFireWorks1"
        android:alpha="0.7"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/fab_margin"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="0.7"
        android:id="@+id/ivFireWorks2"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/fab_margin"/>


</RelativeLayout>
